--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <nav class="navbar modern-navbar">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <span class="brand-text">Forms/Templates</span>
+        <span class="brand-text">Police Files</span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
