--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+<!-- Add this inside your main HTML file -->
+<!-- News button at the top right -->
+<button id="news-btn">News</button>
+
+<!-- Sliding panel that will load the news content -->
+<div id="news-panel"></div>
+
   <!-- Premium Header with Title, Search Bar, and Dark Mode Toggle -->
   <header class="site-header">
     <div class="container">
