--- a/index.html
+++ b/index.html
@@ -149,34 +149,8 @@
 
     <!-- Updates Section (formerly Offers) -->
     <div id="updatesSection" style="display:none;">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="card material-card mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Lucknow Gold Price</h5>
-              <p class="card-text"><span id="goldLucknow">Loading...</span></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card material-card mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Delhi Gold Price</h5>
-              <p class="card-text"><span id="goldDelhi">Loading...</span></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card material-card mb-3">
-            <div class="card-body">
-              <h5 class="card-title">Patna Gold Price</h5>
-              <p class="card-text"><span id="goldPatna">Loading...</span></p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <iframe src="news.html"></iframe>
     </div>
-
     <!-- Category Section (Folders & Search Results) -->
     <div id="categorySection" style="display:none;">
       <div class="folders-container">
