--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -73,7 +73,7 @@
     </div>
     
     <h1>Privacy Policy</h1>
-    <p><strong>Effective Date:</strong> [Insert Effective Date]</p>
+    <p><strong>Effective Date:</strong> 25.03.2025</p>
     
     <h2>1. Introduction</h2>
     <p>
